<resources>
    <string name="app_name">Capstone</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="begin">Laten we beginnen!</string>
    <string name="bedankt">Bedankt voor het downloaden van deze app. Door middel van deze app kan u onderdelen bestellen om uw Seiko 5 aan te passen</string>

    <string name="home">Home</string>
    <string name="winkelwagen">Winkelwagen</string>
    <string name="info">Info</string>


    <string name="info_text">U kunt via het home scherm onderdelen selecteren om in uw winkelwagen te stoppen. Via de balk onderaan uw scherm kunt u in uw winkelwagen komen. Vanaf daar kunt u gerust het totale bedrag zien en eventueel producten uit uw madje verwijderen door op het kruisje te klikken. Hierna kunt u betalen via de groene knop.</string>
    <string name="selecteer_betaalmethode">Selecteer betaalmethode:</string>
    <string name="terug_naar_home">Terug naar home</string>
    <string name="order_success">Bedankt voor uw aankoop. Uw bestelling is afgerond.</string>
    <string name="totaal">Totaal</string>
    <string name="ing_logo">Ing logo</string>
    <string name="abn_amro_logo">Abn Amro logo</string>
    <string name="pay_pal_logo">Pay Pal logo</string>
    <string name="rabobank_logo">Rabobank logo</string>
    <string name="price_default">0.00</string>

</resources>