<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PaymentFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"
        android:text="@string/selecteer_betaalmethode"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/paymentFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

    <ImageButton
        android:id="@+id/btnIng"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/ing_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_ing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnAbnAmro"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/abn_amro_logo"
        android:scaleType="centerInside"
        android:src="@drawable/logo_abn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnPayPal"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/pay_pal_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_paypal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIng" />

    <ImageButton
        android:id="@+id/btnRabobank"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/rabobank_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_rabo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAbnAmro" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="50dp"
        android:text="@string/totaal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPaymentTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="50dp"
        android:text="115.50"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="25dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>